Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5638

OpenGL apps crash on start-up on HP-UX with remote X11 connection

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.6.1
    • 4.6.0
    • GUI: OpenGL
    • None
    • 8fea31ca0ab98ef6fed7bb2d87d97f4f425b2078

    Description

      When using a remote X11 connection, running "padnavigator" crashes at start-up on HP-UX. The same crash happens in any demo at the time OpenGL it enabled (e.g., the Affine demo).

      The crash seems to be caused by use of shader programs in 4.6.

      Configuration: -platform hpuxi-acc-64 -release. Test host: gravlaks. gdb reports the following backtrace:

      qt@gravlaks:~/qt-everywhere-commercial-src-4.6.0/examples/graphicsview/padnavigator> gdb ./padnavigator
      HP gdb 5.4.0 for HP Itanium (32 or 64 bit) and target HP-UX 11.2x.
      Copyright 1986 - 2001 Free Software Foundation, Inc.
      Hewlett-Packard Wildebeest 5.4.0 (based on GDB) is covered by the
      GNU General Public License. Type "show copying" to see the conditions to
      change it and/or distribute copies. Type "show warranty" for warranty/support.
      ..
      (gdb) r
      Starting program: /home/qt/qt-everywhere-commercial-src-4.6.0/examples/graphicsview/padnavigator/./padnavigator
      QGLShaderProgram: shader programs are not supported

      Program received signal SIGSEGV, Segmentation fault
      si_code: 2 - SEGV_ACCERR - Invalid Permissions for object.
      0x0 in <unknown_procedure> ()
      (gdb) bt
      #0 0x0 in <unknown_procedure> ()
      warning: Attempting to unwind past bad PC 0x0
      #1 0x9fffffffef54c150:0 in QGLShaderProgram::bindAttributeLocation(char const*,int)+0x110 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtOpenGL.so.4
      #2 0x9fffffffef5c6120:0 in QGLEngineSharedShaders::QGLEngineSharedShaders (
      this=0x6000000000021d80, context=0x6000000000080ac0)
      at gl2paintengineex/qglengineshadermanager.cpp:184
      #3 0x9fffffffef5c5580:0 in QGLEngineSharedShaders::QGLEngineSharedShaders(QGLContext const*)+0x30 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtOpenGL.so.4
      #4 0x9fffffffef5c4bb0:0 in QGLEngineSharedShaders::shadersForContext(QGLContext const*)+0x2b0 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtOpenGL.so.4
      #5 0x9fffffffef5c3e80:0 in QGLEngineShaderManager::QGLEngineShaderManager(QGLContext*)+0xf0 () at .moc/release-shared/moc_qglengineshadermanager_p.cpp:1
      #6 0x9fffffffef5c3d40:0 in QGLEngineShaderManager::QGLEngineShaderManager(QGLContext*)+0x30 () at .moc/release-shared/moc_qglengineshadermanager_p.cpp:1
      #7 0x9fffffffef5beca0:0 in inline qt_noop() ()
      #8 0x9fffffffef5bec50:0 in QGL2PaintEngineEx::begin (this=0x600000000016a2c0,
      pdev=0x60000000000a9ac0)
      at gl2paintengineex/qpaintengineex_opengl2.cpp:1751
      #9 0x9fffffffed1d4ef0:0 in QPainter::begin(QPaintDevice*)+0x13a0 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      --Type <return> to continue, or q <return> to quit--
      #10 0x9fffffffed1a70a0:0 in QPainter::QPainter(QPaintDevice*)+0x480 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #11 0x9fffffffed1a6bd0:0 in QPainter::QPainter(QPaintDevice*)+0x30 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #12 0x9fffffffeed41500:0 in QGraphicsView::paintEvent (
      this=0x9ffffffffffff200, event=0x9fffffffffffe070)
      at graphicsview/qgraphicsview.cpp:3258
      #13 0x9fffffffed11bb00:0 in QWidget::event (this=0x9ffffffffffff200,
      event=0x9fffffffffffe070) at kernel/qwidget.cpp:8103
      #14 0x9fffffffed9bb430:0 in QFrame::event(QEvent*)+0x100 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #15 0x9fffffffed9bb1e0:0 in QAbstractScrollArea::viewportEvent(QEvent*)
      +0x120 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #16 0x9fffffffee5e1990:0 in QGraphicsView::viewportEvent(QEvent*)+0xda0 ()
      at kernel/qwidgetcreate_x11.cpp:77
      #17 0x9fffffffedf5c610:0 in QAbstractScrollAreaFilter::eventFilter(QObject*,QEvent*)+0xc0 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #18 0x9fffffffec1d75b0:0 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*,QEvent*)+0x590 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtCore.so.4
      #19 0x9fffffffed878020:0 in QApplicationPrivate::notify_helper(QObject*,QEvent*)+0x450 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #20 0x9fffffffee7e3b00:0 in QApplication::notify(QObject*,QEvent*)+0x56d0 ()
      --Type <return> to continue, or q <return> to quit--
      at math3d/qmatrix4x4.cpp:1535
      #21 0x9fffffffebdd61b0:0 in QCoreApplication::notifyInternal(QObject*,QEvent*)
      +0x1f0 () at kernel/qcoreevent.cpp:293
      #22 0x9fffffffed8707c0:0 in QCoreApplication::sendSpontaneousEvent(QObject*,QEvent*)+0xc0 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #23 0x9fffffffed1a4ee0:0 in QWidgetPrivate::drawWidget(QPaintDevice*,QRegion const&,QPoint const&,int,QPainter*,QWidgetBackingStore*)+0xf40 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #24 0x9fffffffed1a2b10:0 in QWidgetPrivate::repaint_sys(QRegion const&)
      +0x8d0 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #25 0x9fffffffee67d8d0:0 in QWidgetPrivate::syncBackingStore()+0x60 ()
      at kernel/qwidgetcreate_x11.cpp:59
      #26 0x9fffffffed11c710:0 in QWidget::event (this=0x60000000000a9ab0,
      event=0x600000000016c550) at kernel/qwidget.cpp:8249
      #27 0x9fffffffef584190:0 in QGLWidget::event(QEvent*)+0xc00 ()
      at gl2paintengineex/qgl2pexvertexarray.cpp:1
      #28 0x9fffffffed8780a0:0 in QApplicationPrivate::notify_helper(QObject*,QEvent*)+0x4d0 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #29 0x9fffffffee7e3b00:0 in QApplication::notify(QObject*,QEvent*)+0x56d0 ()
      at math3d/qmatrix4x4.cpp:1535
      #30 0x9fffffffebdd61b0:0 in QCoreApplication::notifyInternal(QObject*,QEvent*)
      +0x1f0 () at kernel/qcoreevent.cpp:293
      #31 0x9fffffffebfd6cc0:0 in QCoreApplication::sendEvent(QObject*,QEvent*)
      --Type <return> to continue, or q <return> to quit--
      +0xa0 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtCore.so.4
      #32 0x9fffffffebfd58c0:0 in QCoreApplicationPrivate::sendPostedEvents(QObject*,int,QThreadData*)+0x760 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtCore.so.4
      #33 0x9fffffffebfef4a0:0 in QCoreApplication::sendPostedEvents(QObject*,int)
      +0x60 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtCore.so.4
      #34 0x9fffffffee5ed170:0 in QGraphicsViewPrivate::dispatchPendingUpdateRequests()+0x90 () at kernel/qwidgetcreate_x11.cpp:77
      #35 0x9fffffffee5ebb50:0 in QGraphicsScenePrivate::_q_emitUpdated()+0x520 ()
      at kernel/qwidgetcreate_x11.cpp:77
      #36 0x9fffffffed193f20:0 in QGraphicsScene::qt_metacall(QMetaObject::Call,int,void**)+0x440 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #37 0x9fffffffebee7da0:0 in QMetaObject::metacall(QObject*,QMetaObject::Call,int,void**)+0x160 () at kernel/qcoreevent.cpp:293
      #38 0x9fffffffebeec890:0 in QMetaCallEvent::placeMetaCall (
      this=0x6000000000021ea0, object=0x6000000000080b20)
      at kernel/qobject.cpp:562
      #39 0x9fffffffebcb46c0:0 in QObject::event (this=0x6000000000080b20,
      e=0x6000000000021ea0) at kernel/qobject.cpp:1240
      #40 0x9fffffffee626400:0 in QGraphicsScene::event(QEvent*)+0x1d90 ()
      at kernel/qwidgetcreate_x11.cpp:77
      #41 0x9fffffffed8780a0:0 in QApplicationPrivate::notify_helper(QObject*,QEvent*)--Type <return> to continue, or q <return> to quit--
      +0x4d0 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #42 0x9fffffffee7dee40:0 in QApplication::notify(QObject*,QEvent*)+0xa10 ()
      at math3d/qmatrix4x4.cpp:1535
      #43 0x9fffffffebdd61b0:0 in QCoreApplication::notifyInternal(QObject*,QEvent*)
      +0x1f0 () at kernel/qcoreevent.cpp:293
      #44 0x9fffffffebfd6cc0:0 in QCoreApplication::sendEvent(QObject*,QEvent*)
      +0xa0 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtCore.so.4
      #45 0x9fffffffebfd58c0:0 in QCoreApplicationPrivate::sendPostedEvents(QObject*,int,QThreadData*)+0x760 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtCore.so.4
      #46 0x9fffffffebfef4a0:0 in QCoreApplication::sendPostedEvents(QObject*,int)
      +0x60 () from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtCore.so.4
      #47 0x9fffffffeec94a70:0 in QCoreApplication::sendPostedEvents()+0x30 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #48 0x9fffffffeec937c0:0 in QEventDispatcherX11::processEvents (
      this=0x600000000000cea0, flags=0x9ffffffffffff1a4)
      at kernel/qeventdispatcher_x11.cpp:75
      #49 0x9fffffffebfef320:0 in QEventLoop::processEvents (
      this=0x9ffffffffffff1e0, flags=0x9ffffffffffff1b0)
      at kernel/qeventloop.cpp:149
      #50 0x9fffffffebfea3f0:0 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)+0x400 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtCore.so.4
      --Type <return> to continue, or q <return> to quit--
      #51 0x9fffffffec2c4e90:0 in QCoreApplication::exec()+0x500 ()
      at kernel/qsocketnotifier.cpp:1
      #52 0x9fffffffeeddbe00:0 in QApplication::exec()+0x50 ()
      from /home/qt/qt-everywhere-commercial-src-4.6.0/lib/libQtGui.so.4
      #53 0x400000000001f790:0 in main (argc=1, argv=0x9ffffffffffff738)
      at main.cpp:58
      (gdb)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rweather Rhys Weatherley (closed Nokia identity) (Inactive)
            hanssen Andreas Aardal Hanssen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes