Detect GL2 paint engine based on fragment shaders, not programs

The auto-detect logic was looking for fragment programs to check
for OpenGL2 support.  It should have been looking for fragment shaders.

Task-number: QTBUG-5638
Reviewed-by: Sarah Smith